--- a/src/frontend/styles/pages/index.styl
+++ b/src/frontend/styles/pages/index.styl
@@ -188,5 +188,12 @@ NAME_BLUE = #549AE6
     .intro
       .container
         left 50%
-        padding-left 0
         transform translate(-50%, -50%)
+    .featured
+      .arrows
+        right 25px
+    .intro, .featured
+      .container
+        padding-left 25px
+        padding-right 25px
+        box-sizing border-box
